将format.tex中的封面、诚信声明、中英文摘要的代码放到对应的文件中

--- a/main.tex
+++ b/main.tex
@@ -17,50 +17,48 @@
 \frontmatter                               % 以下是论文导言部分，包括论文的封面，中英文摘要和中文目录
 
 \clearpage
-\makepageheader
 \input{data/cover}							% 封面
 \input{data/copyright}						% 诚信说明
+\input{data/cnabstract}						% 中文摘要
+\input{data/enabstract}						% 英文摘要
 
 \clearpage
-\setcounter{page}{1} 		% modified by Jon, 加入“\setcounter{page}{1}”，让摘要的起始页码为1。
-\input{data/abstract}					% 摘要
 
-\clearpage
-
-%%%%%%%%%%   目录   %%%%%%%%%%
+% 目录
 \defaultfont
 \clearpage
-%\addcontentsline{toc}{chapter}{目~~~~录}		%  modified by Jon: 注释该行，不要把“目录”加入目录中
-\renewcommand{\contentsname}{\erhao\song\bfseries\hspace*{\fill}目\quad 录\hspace*{\fill}}
+\renewcommand{\contentsname}{\erhao\song\bfseries\hspace*{\fill}目\quad 录\hspace*{\fill}}    % 设置“目录”二字的格式
 \tableofcontents                           % 中文目录
 \thispagestyle{empty}		% modified by Jon: 去掉页眉页脚
 \clearpage{\pagestyle{empty}\cleardoublepage}
 
-%%%%%%%%%% 正文部分内容  %%%%%%%%%%
+% 正文部分
 \mainmatter\defaultfont\sloppy\raggedbottom
 %\renewcommand{\ALC@linenosize}{\xiaosi}
 \renewcommand\arraystretch{1.5}
 \setlength{\intextsep}{2pt}
 \setlength{\abovecaptionskip}{2pt}
 \setlength{\belowcaptionskip}{2pt}
-% 内容比较多的时候，编译速度较慢，可以将不同章节放在不同文件中，注释掉其他章节，只编译正在写的章节，以提升编译速度
-\include{data/intros} 							% 绪论
-\include{data/body} 							% 其他章节
-\include{data/conclusion}
-%%%%%%%%%% 正文部分内容  %%%%%%%%%%
 
-%%%%%%%%%%  参考文献  %%%%%%%%%%
+% 内容比较多的时候，编译速度较慢，可以将不同章节放在不同文件中，注释掉其他章节，只编译正在撰写的章节，以提升编译速度
+\include{data/intros} 							
+\include{data/body} 							
+\include{data/conclusion}
+
+
+% 参考文献
 \defaultfont
 \bibliographystyle{HNUThesis}
 \phantomsection
-\addcontentsline{toc}{chapter}{参考文献}          % 参考文献加入到中文目录
-%\nocite{*}                                        % 若将此命令屏蔽掉，则未引用的文献不会出现在文后的参考文献中。
+\addcontentsline{toc}{chapter}{参考文献}          	% 参考文献加入到中文目录
+%\nocite{*}                                        	% 若将此命令屏蔽掉，则未引用的文献不会出现在文后的参考文献中。
 \bibliographystyle{plain} 
+\bibliography{references}					
 
-\bibliography{references}						% 参考文献
-\include{data/appendix}                   	% 附录
-\include{data/acknowledgements}				% 致谢
-\include{data/publications}					% 研究成果
+\include{data/appendix}                   			% 附录
+\include{data/acknowledgements}						% 致谢
+\include{data/publications}							% 研究成果
 \clearpage
-\end{CJK*}                                        % 结束中文字体使用
-\end{document}                                    % 结束全文
+
+\end{CJK*}                                        	% 结束中文字体使用
+\end{document}                                    	% 结束全文
