--- a/data/copyright.tex
+++ b/data/copyright.tex
@@ -1,33 +1,27 @@
 % !Mode:: "TeX:UTF-8"
 
-\declaretitle{原创性声明}
-\declarecontent{
-本人郑重声明： 所呈交的学位论文\underline{《xxx》}是本人在导师的指导下，独立进行研究工作所取得的成果。除文中已经注明引用的内容外，本论文不含任何其他个人或集体已经发表或撰写过的作品或成果。对本文的研究做出重要贡献的个人和集体，均已在文中以明确方式标明。本声明的法律结果由本人承担。
-}
-\authorizationtitle{学位论文版权使用授权书}
-\authorizationcontent{
-本学位论文作者完全了解深圳大学关于收集、保存、使用学位论文的规定，即：研究生在校攻读学位期间论文工作的知识产权单位属深圳大学。学校有权保留学位论文并向国家主管部门或其他机构送交论文的电子版和纸质版，允许论文被查阅和借阅。本人授权深圳大学可以将学位论文的全部或部分内容编入有关数据库进行检索，可以采用影印、缩印或扫描等复制手段保存、汇编学位论文。
-}
-\authorizationadd{（涉密学位论文在解密后适用本授权书）}
-\authorsigncap{作者签名:}
-\supervisorsigncap{导师签名:}
-\signdatecap{签字日期:}
-
-%\cdate{\CJKdigits{\the\year} 年\CJKnumber{\the\month} 月 \CJKnumber{\the\day} 日}
-% 如需改成二零一二年四月二十五日的格式，可以直接输入，即如下所示
-% \cdate{二零一二年四月二十五日}
-\cdate{\the\year 年\the\month 月 \the\day 日} % 此日期显示格式为阿拉伯数字 如2012年4月25日
+%%%% 此处是原创性声明的格式定义，数据填写的部分在下方 %%%
 
 \makeatletter
+
+\def\declaretitle#1{\def\@declaretitle{#1}}\def\@declaretitle{}
+\def\declarecontent#1{\def\@declarecontent{#1}}\def\@declarecontent{}
+\def\authorizationtitle#1{\def\@authorizationtitle{#1}}\def\@authorizationtitle{}
+\def\authorizationcontent#1{\def\@authorizationcontent{#1}}\def\@authorizationconent{}
+\def\authorizationadd#1{\def\@authorizationadd{#1}}\def\@authorizationadd{}
+\def\authorsigncap#1{\def\@authorsigncap{#1}}\def\@authorsigncap{}
+\def\supervisorsigncap#1{\def\@supervisorsigncap{#1}}\def\@supervisorsigncap{}
+\def\signdatecap#1{\def\@signdatecap{#1}}\def\@signdatecap{}
+
+% 定义makecopyright以生成原创性说明
 \def\makecopyright{
 	
 	\clearpage
 	
-	%  另起一页： 独创性声明和学位论文版权使用授权书
 	% 如果需要上传稿包含版权页，取消这部分内容注释
-	%\addcontentsline{toc}{chapter}{学位论文原创性声明和学位论文版权使用授权书}
-	%\setcounter{page}{1}
 	%\includepdf{Copyright.pdf}
+	
+	
 	% 如果需要打印稿，即需要打印后手写，取消该部分内容注释
 	\pagestyle{fancy}
 	\fancyhf{}
@@ -62,4 +56,21 @@
 	}
 }
 \makeatother
+
+%%%% 数据填写的部分 %%%
+
+\declaretitle{原创性声明}
+\declarecontent{
+	本人郑重声明： 所呈交的学位论文\underline{《xxx》}是本人在导师的指导下，独立进行研究工作所取得的成果。除文中已经注明引用的内容外，本论文不含任何其他个人或集体已经发表或撰写过的作品或成果。对本文的研究做出重要贡献的个人和集体，均已在文中以明确方式标明。本声明的法律结果由本人承担。
+}
+\authorizationtitle{学位论文版权使用授权书}
+\authorizationcontent{
+	本学位论文作者完全了解深圳大学关于收集、保存、使用学位论文的规定，即：研究生在校攻读学位期间论文工作的知识产权单位属深圳大学。学校有权保留学位论文并向国家主管部门或其他机构送交论文的电子版和纸质版，允许论文被查阅和借阅。本人授权深圳大学可以将学位论文的全部或部分内容编入有关数据库进行检索，可以采用影印、缩印或扫描等复制手段保存、汇编学位论文。
+}
+\authorizationadd{（涉密学位论文在解密后适用本授权书）}
+\authorsigncap{作者签名:}
+\supervisorsigncap{导师签名:}
+\signdatecap{签字日期:}
+
+% 使用makecopyright生成原创性说明
 \makecopyright
