--- a/data/cover.tex
+++ b/data/cover.tex
@@ -1,27 +1,27 @@
 % !Mode:: "TeX:UTF-8"
 
-\cclassnumber{TP37}
-\cschoolnumer{10590}
-\UDCnumber{UDCnumber}
-\csecret{公开}
+%%%% 此处是论文封面格式的定义，数据填写的部分在下方 %%%
 
-\cheading{深圳大学硕士学位论文}
-\dtitle{论文名称} %封面用论文标题，自己可手动断行
-\ctitle{中文页眉标题}  %页眉标题无需断行
-\etitle{英文页眉标题}
-\cdegree{学位类别}
-\ccollegename{计算机科学与软件学院} %学院名称
-\csubject{计算机科学与技术}   %专业
-\cauthor{张~~三}   %学生姓名
-\csupervisor{李四教授} %导师姓名
-\cchair{~~~~~~~~}
-\ddate{~~~~~~~~年~~~~月~~~~日}
-
-%\cleardoublepage%
 \phantomsection
 \makeatletter
+
+\def\thesisTitle#1{\def\@thesisTitle{#1}}\def\@thesisTitle{}
+\def\ctitle#1{\def\@ctitle{#1}}\def\@ctitle{}
+\def\cdegree#1{\def\@cdegree{#1}}\def\@cdegree{}
+\def\majorName#1{\def\@majorName{#1}}\def\@majorName{}
+\def\authorName#1{\def\@authorName{#1}}\def\@authorName{}
+\def\supervisor#1{\def\@supervisor{#1}}\def\@supervisor{}
+
+\def\cheading#1{\def\@cheading{#1}}\def\@cheading{}
+\def\security#1{\def\@security{#1}}\def\@security{}
+\def\schoolcode#1{\def\@schoolcode{#1}}\def\@schoolcode{}
+\def\college#1{\def\@college{#1}}\def\@college{}
+\def\UDCnumber#1{\def\@UDCnumber{#1}}\def\@UDCnumber{}
+\def\classnumber#1{\def\@classnumber{#1}}\def\@classnumber{}
+
 \pdfbookmark[-1]{\@ctitle}{ctitle}
 
+% 定义makecover以生成封面
 \def\makecover{
 	
 	\clearpage
@@ -32,10 +32,10 @@
 			\setlength{\@title@width}{3.5cm}
 			{
 				\begin{tabular}{lcclc}
-					\xiaosi\hei{分类号}&  \underline{\makebox[\@title@width][c]{\@cclassnumber}}&\qquad \qquad \qquad \qquad \qquad & 
-					\xiaosi\hei{学校代码}&  \underline{\makebox[\@title@width][c]{\@cschoolnumer}}\\
+					\xiaosi\hei{分类号}&  \underline{\makebox[\@title@width][c]{\@classnumber}}&\qquad \qquad \qquad \qquad \qquad & 
+					\xiaosi\hei{学校代码}&  \underline{\makebox[\@title@width][c]{\@schoolcode}}\\
 					\xiaosi\hei{U~~D~~C}& \underline{\makebox[\@title@width][c]{\@UDCnumber}}&\qquad \qquad \qquad \qquad \qquad & 
-					\xiaosi\hei{密~~~~~~级}&  \underline{\makebox[\@title@width][c]{\@csecret}} \\
+					\xiaosi\hei{密~~~~~~级}&  \underline{\makebox[\@title@width][c]{\@security}} \\
 				\end{tabular}
 			}
 			
@@ -46,13 +46,13 @@
 			
 			\begin{center}
 				\begin{spacing}{1.5}
-					\hei\sanhao \@dtitle%标题可以使用断字
+					\hei\sanhao \@thesisTitle%标题可以使用断字
 				\end{spacing}
 			\end{center}
 			
 			\begin{center}
 				\begin{spacing}{1.5}
-					\song\sanhao \@cauthor%标题可以使用断字
+					\song\sanhao \@authorName%标题可以使用断字
 				\end{spacing}
 			\end{center}
 			
@@ -60,11 +60,11 @@
 			\vspace{\baselineskip}
 			\setlength{\@title@width}{6.5cm}
 			{
-				\begin{spacing}{3  }
+				\begin{spacing}{3}
 					\makebox[3.3cm][s]{\sanhao\song{学~~~~位~~~~类~~~~别}} \sanhao\song\underline{\makebox[\@title@width]{\@cdegree}} \\
-					\makebox[3.3cm][s]{\sanhao\song{专~~~~业~~~~名~~~~称}} \sanhao\song\underline{\makebox[\@title@width]{\@csubject}} \\
-					\makebox[3.3cm][s]{\sanhao\song{学院（系、所）}} \sanhao\song\underline{\makebox[\@title@width]{\@ccollegename}} \\
-					\makebox[3.3cm][s]{\sanhao\song{指导老师}} \sanhao\song\underline{\makebox[\@title@width]{\@csupervisor}} \\
+					\makebox[3.3cm][s]{\sanhao\song{专~~~~业~~~~名~~~~称}} \sanhao\song\underline{\makebox[\@title@width]{\@majorName}} \\
+					\makebox[3.3cm][s]{\sanhao\song{学院（系、所）}} \sanhao\song\underline{\makebox[\@title@width]{\@college}} \\
+					\makebox[3.3cm][s]{\sanhao\song{指导老师}} \sanhao\song\underline{\makebox[\@title@width]{\@supervisor}} \\
 				\end{spacing}
 			}
 		\end{center}
@@ -74,4 +74,23 @@
 	\end{titlepage}	
 }
 \makeatother
+
+
+%%% 此处是数据填写部分 
+
+\classnumber{TP37}
+\schoolcode{10590}
+\UDCnumber{UDCnumber}
+\security{公开}
+
+\cheading{深圳大学硕士学位论文}
+\thesisTitle{论文名称} %封面用论文标题，自己可手动断行
+\ctitle{中文页眉标题}  %页眉标题无需断行
+\cdegree{学位类别}
+\college{计算机科学与软件学院} %学院名称
+\majorName{计算机科学与技术}   %专业
+\authorName{张~~三}   %学生姓名
+\supervisor{李四教授} %导师姓名
+
+% 使用makecover生成封面
 \makecover
