1. minor update 2. 重命名文件, origin-README.md，origin-论文撰写文档

--- a/data/copyright.tex
+++ b/data/copyright.tex
@@ -19,7 +19,7 @@
 	\clearpage
 	
 	% 如果需要上传稿包含版权页，取消这部分内容注释
-	%\includepdf{Copyright.pdf}
+	%\includepdf{data/Copyright.pdf}
 	
 	
 	% 如果需要打印稿，即需要打印后手写，取消该部分内容注释
@@ -27,7 +27,6 @@
 	\fancyhf{}
 	\fancyfoot[C]{\song\xiaowu ~\thepage~}
 	\renewcommand{\headrulewidth}{0pt}
-	
 	\chapter*{\song\sanhao 深圳大学学位论文原创性声明和使用授权说明}{		% modified by Jon, 原创性说明无需加入目录，使用chapter*
 		\thispagestyle{empty} 		% modified by Jon: 原创性说明不需要页码
 		\qquad\\
