--- a/setup/format.tex
+++ b/setup/format.tex
@@ -137,7 +137,7 @@
 
 
 
-%%%%%%%%%% 表格，图标，等式格式设置 %%%%%%%%%%%%%%%%%
+%%%%%%%%%% 表格，图表，公式格式设置 %%%%%%%%%%%%%%%%%
 \renewcommand{\tablename}{表} % 插表题头
 \renewcommand{\figurename}{图} % 插图题头
 \renewcommand{\thefigure}{\arabic{chapter}.\arabic{figure}} % 使图编号为 7.1 的格式 %\protect{~}
