--- a/data/copyright.tex
+++ b/data/copyright.tex
@@ -22,7 +22,7 @@
 	%\includepdf{data/Copyright.pdf}
 	
 	
-	% 如果需要打印稿，即需要打印后手写，取消该部分内容注释
+	% 下面的原创性声明页面的格式设置，如果引入pdf文件作为原创性声明，则将此部分代码注释掉
 	\pagestyle{fancy}
 	\fancyhf{}
 	\fancyfoot[C]{\song\xiaowu ~\thepage~}
