--- a/main.tex
+++ b/main.tex
@@ -42,7 +42,8 @@
 
 % 内容比较多的时候，编译速度较慢，可以将不同章节放在不同文件中，注释掉其他章节，只编译正在撰写的章节，以提升编译速度
 \include{data/intros} 							
-\include{data/body} 							
+\include{data/chapter2}
+\include{data/chapter3}						
 \include{data/conclusion}
 
 
