--- a/data/cnabstract.tex
+++ b/data/cnabstract.tex
@@ -17,9 +17,11 @@
 	
 	%%%%%%%%%%%%%%%%%%%		中文摘要		%%%%%%%%%%%%%%%%%%%
 	\addcontentsline{toc}{chapter}{摘\quad 要}
-	\chapter*{\centering\erhao\song\bfseries\ 摘\qquad 要}		% 摘要标题，宋体加粗二号
+	\chapter*{\centering\erhao\song\bfseries\ 摘\qquad 要}	% 摘要标题，宋体加粗二号
 	\song\defaultfont
-	\@cabstract
+	\vspace{\baselineskip} 										% 空两行
+	\vspace{\baselineskip}
+	\@cabstract													% 摘要正文
 	\vspace{\baselineskip}
 	
 	%\hangafter=1\hangindent=52.3pt\noindent   %如果取消该行注释，关键词换行时将会自动缩进
