--- a/data/enabstract.tex
+++ b/data/enabstract.tex
@@ -20,15 +20,17 @@
 	}
 	
 	\addcontentsline{toc}{chapter}{Abstract}
-	\chapter*{\centering\erhao \bf{Abstract}}		% 二号
-	%\vspace{\baselineskip}
-	\@enabstract
-	\thispagestyle{englishAbstract}		% modified by Jon: 应用englishAbstract
+	\chapter*{\centering\erhao \bf{Abstract}}		% 标题，二号
+	\vspace{\baselineskip} 							% 空两行
+	\vspace{\baselineskip}
+	
+	\@enabstract									% 英文摘要正文
+	\thispagestyle{englishAbstract}					% 应用englishAbstract
 	\vspace{\baselineskip}
 	
 	%\hangafter=1\hangindent=60pt\noindent  %如果取消该行注释，KEY WORDS换行时将会自动缩进
 	\noindent
-	{\xiaosi\textbf{Key Words:} \@enkeywords}
+	{\xiaosi\textbf{Key Words:} \@enkeywords}		% 英文关键字
 	
 }
 \makeatother
