--- a/data/copyright.tex
+++ b/data/copyright.tex
@@ -22,7 +22,7 @@
 	%\includepdf{data/Copyright.pdf}
 	
 	
-	% 下面的原创性声明页面的格式设置，如果引入pdf文件作为原创性声明，则将此部分代码注释掉
+	% 下面为原创性声明页面的格式设置，如果引入pdf文件作为原创性声明，则将此部分代码注释掉
 	\pagestyle{fancy}
 	\fancyhf{}
 	\fancyfoot[C]{\song\xiaowu ~\thepage~}
@@ -53,6 +53,8 @@
 			\@supervisorsigncap \makebox[3.5cm][s]{}  \@signdatecap \makebox[1.5cm][s]{} 年 \makebox[1cm][s]{} 月 \makebox[1cm][s]{} 日
 		}
 	}
+
+	\clearpage
 }
 \makeatother
 
