--- a/setup/format.tex
+++ b/setup/format.tex
@@ -57,7 +57,7 @@
 
 \makeatletter
 \renewcommand\normalsize{
-  \@setfontsize\normalsize{12pt}{11.5pt} 	% 此处用于设置正文字体
+  \@setfontsize\normalsize{12pt}{12pt} 	% 此处用于设置正文字体，小四号字体
   \setlength\abovedisplayskip{4pt}
   \setlength\abovedisplayshortskip{4pt}
   \setlength\belowdisplayskip{\abovedisplayskip}
@@ -67,7 +67,7 @@
 
 
 % 设置行距和段落间垂直距离
-\setlength{\baselineskip}{20pt}
+\setlength{\baselineskip}{23pt}		% 行距为23pt
 \renewcommand{\CJKglue}{\hskip 0.5pt plus \baselineskip} %加大字间距，使每行35个字
 
 \makeatother
