--- a/data/enabstract.tex
+++ b/data/enabstract.tex
@@ -7,31 +7,31 @@
 \def\enkeywords#1{\def\@enkeywords{#1}}\def\@enkeywords{}
 \def\enpageheader#1{\def\@enpageheader{#1}}\def\@enpageheader{}
 
+% 使用fancy来设置页眉页脚，自定义了新的格式——englishAbstract
+\fancypagestyle{englishAbstract}{
+	\fancyhead[C]{\wuhao \@enpageheader}		% 使用英文论文名称作为页眉
+	\fancyfoot[C]{\song\wuhao ~\thepage~}
+}
+
 % 定义makeenabstract以生成英文摘要
 \def\makeenabstract{
 	
 	\clearpage
-	
-	% 使用fancy来设置页眉页脚，自定义了新的格式——englishAbstract
-	\pagestyle{fancy}
-	\fancypagestyle{englishAbstract}{
-		\fancyhead[C]{\wuhao \@enpageheader}		% 使用英文论文名称作为页眉
-		\fancyfoot[C]{\song\wuhao ~\thepage~}
-	}
-	
+	\pagestyle{englishAbstract}{}					% 应用englishAbstract
 	\addcontentsline{toc}{chapter}{Abstract}
 	\chapter*{\centering\erhao \bf{Abstract}}		% 标题，二号
+	\thispagestyle{englishAbstract}{}				% 应用englishAbstract
 	\vspace{\baselineskip} 							% 空两行
 	\vspace{\baselineskip}
 	
 	\@enabstract									% 英文摘要正文
-	\thispagestyle{englishAbstract}					% 应用englishAbstract
 	\vspace{\baselineskip}
 	
 	%\hangafter=1\hangindent=60pt\noindent  %如果取消该行注释，KEY WORDS换行时将会自动缩进
 	\noindent
 	{\xiaosi\textbf{Key Words:} \@enkeywords}		% 英文关键字
 	
+	\clearpage
 }
 \makeatother
 
