添加测试文字

--- a/data/acknowledgements.tex
+++ b/data/acknowledgements.tex
@@ -7,7 +7,47 @@
 
 \begin{theacknowledgements}
 	
-xxx
+元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
+
+团团圆圆，圆你美梦，快快乐乐，乐享人生，健健康康，平安如意，幸幸福福，逍遥自在，热热闹闹，欢天喜地，元旦快乐，愿您开心！
+
+一年有365个日出，我心有365个祝福，一年有365个日落，我心有365个心愿，祝你健健康康另一个365，愿你平平安安另一个365，元旦节快乐！
+
+快乐时我给你祝福，失意时给你安抚，友情是最大的财富，幸福蕴含在知足。新的一年，让我们共同祝福，元旦快乐！快乐永远！新的一年梦想实现！
+
+元旦的曙光就要来了，请对着蓝天微笑一下。我要剪裁2011个开心时光，为你缝成2012件幸福衣裳。别忘了，即使活得很现实，也要想得很美好。
+
+喜悦，在心中荡漾；笑容，在脸颊洋溢；歌声，在悠扬回荡；舞步，在惬意游走；礼花，在尽情绽放；祝福，在频频发送。朋友，元旦快乐！祝你幸福，阖家欢乐！
+
+元旦将来到，我心费思量。朋友关系好，送个什么好。我无多钱财，也没中彩票。短信送祝福，礼轻情意重。祝你轻轻松松无烦恼，快快乐乐过元旦！
+
+元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
+
+团团圆圆，圆你美梦，快快乐乐，乐享人生，健健康康，平安如意，幸幸福福，逍遥自在，热热闹闹，欢天喜地，元旦快乐，愿您开心！
+
+一年有365个日出，我心有365个祝福，一年有365个日落，我心有365个心愿，祝你健健康康另一个365，愿你平平安安另一个365，元旦节快乐！
+
+快乐时我给你祝福，失意时给你安抚，友情是最大的财富，幸福蕴含在知足。新的一年，让我们共同祝福，元旦快乐！快乐永远！新的一年梦想实现！
+
+元旦的曙光就要来了，请对着蓝天微笑一下。我要剪裁2011个开心时光，为你缝成2012件幸福衣裳。别忘了，即使活得很现实，也要想得很美好。
+
+喜悦，在心中荡漾；笑容，在脸颊洋溢；歌声，在悠扬回荡；舞步，在惬意游走；礼花，在尽情绽放；祝福，在频频发送。朋友，元旦快乐！祝你幸福，阖家欢乐！
+
+元旦将来到，我心费思量。朋友关系好，送个什么好。我无多钱财，也没中彩票。短信送祝福，礼轻情意重。祝你轻轻松松无烦恼，快快乐乐过元旦！
+
+元旦过，过元旦，元旦过完去上班；莫要吵，莫要闹，祝福短信送不完。元旦过完是新年，问候依旧在心间，借着元旦的余热提前祝你新年快乐！
+
+团团圆圆，圆你美梦，快快乐乐，乐享人生，健健康康，平安如意，幸幸福福，逍遥自在，热热闹闹，欢天喜地，元旦快乐，愿您开心！
+
+一年有365个日出，我心有365个祝福，一年有365个日落，我心有365个心愿，祝你健健康康另一个365，愿你平平安安另一个365，元旦节快乐！
+
+快乐时我给你祝福，失意时给你安抚，友情是最大的财富，幸福蕴含在知足。新的一年，让我们共同祝福，元旦快乐！快乐永远！新的一年梦想实现！
+
+元旦的曙光就要来了，请对着蓝天微笑一下。我要剪裁2011个开心时光，为你缝成2012件幸福衣裳。别忘了，即使活得很现实，也要想得很美好。
+
+喜悦，在心中荡漾；笑容，在脸颊洋溢；歌声，在悠扬回荡；舞步，在惬意游走；礼花，在尽情绽放；祝福，在频频发送。朋友，元旦快乐！祝你幸福，阖家欢乐！
+
+元旦将来到，我心费思量。朋友关系好，送个什么好。我无多钱财，也没中彩票。短信送祝福，礼轻情意重。祝你轻轻松松无烦恼，快快乐乐过元旦！
 
 \rightline{姓名}
 
