--- a/data/enabstract.tex
+++ b/data/enabstract.tex
@@ -38,7 +38,33 @@
 
 %%% 英文摘要数据部分 %%%
 
-\enabstract{英文摘要写在此处}
+\enabstract{
+
+May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
+	
+May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
+
+May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
+
+May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
+
+May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
+
+May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
+
+May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
+
+May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
+
+May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
+
+May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
+
+May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
+
+May joy and health be with you always. May happiness follow you wherever you go! Wishing you and yours a happy happy new year. A beautiful wish to you and your family --- live a happy life and everything goes well. A happy New Year to you. 
+
+}
 \enpageheader{英文页眉标题}
 \enkeywords{keyworkds1;~~keyworkds2;~~keyworkds3}
 
