--- a/references.bib
+++ b/references.bib
@@ -7,3 +7,173 @@
   pages={24},
   year={2009}
 }
+
+@article{barnes2009patchmatch2,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
+
+@article{barnes2009patchmatch3,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
+
+@article{barnes2009patchmatch4,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
+
+@article{barnes2009patchmatch5,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
+
+@article{barnes2009patchmatch6,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
+
+@article{barnes2009patchmatch7,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
+
+@article{barnes2009patchmatch8,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
+
+@article{barnes2009patchmatch9,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
+
+@article{barnes2009patchmatch10,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
+
+@article{barnes2009patchmatch11,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
+
+@article{barnes2009patchmatch12,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
+
+@article{barnes2009patchmatch13,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
+
+@article{barnes2009patchmatch14,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
+
+@article{barnes2009patchmatch15,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
+
+@article{barnes2009patchmatch16,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
+
+@article{barnes2009patchmatch17,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
+
+@article{barnes2009patchmatch18,
+	title={PatchMatch: A randomized correspondence algorithm for structural image editing},
+	author={Barnes, Connelly and Shechtman, Eli and Finkelstein, Adam and Goldman, Dan B},
+	journal={ACM Trans. Graph.},
+	volume={28},
+	number={3},
+	pages={24},
+	year={2009}
+}
