将封面、原创性声明、中英文摘要的格式设置放在format中

--- a/data/cover.tex
+++ b/data/cover.tex
@@ -1,82 +1,6 @@
 % !Mode:: "TeX:UTF-8"
 
-%%%% 此处是论文封面格式的定义，数据填写的部分在下方 %%%
-
-\phantomsection
-\makeatletter
-
-\def\thesisTitle#1{\def\@thesisTitle{#1}}\def\@thesisTitle{}
-\def\ctitle#1{\def\@ctitle{#1}}\def\@ctitle{}
-\def\cdegree#1{\def\@cdegree{#1}}\def\@cdegree{}
-\def\majorName#1{\def\@majorName{#1}}\def\@majorName{}
-\def\authorName#1{\def\@authorName{#1}}\def\@authorName{}
-\def\supervisor#1{\def\@supervisor{#1}}\def\@supervisor{}
-
-\def\cheading#1{\def\@cheading{#1}}\def\@cheading{}
-\def\security#1{\def\@security{#1}}\def\@security{}
-\def\schoolcode#1{\def\@schoolcode{#1}}\def\@schoolcode{}
-\def\college#1{\def\@college{#1}}\def\@college{}
-\def\UDCnumber#1{\def\@UDCnumber{#1}}\def\@UDCnumber{}
-\def\classnumber#1{\def\@classnumber{#1}}\def\@classnumber{}
-
-% 定义makecover以生成封面
-\def\makecover{
-	
-	\clearpage
-	
-	\pdfbookmark[-1]{封面}{ctitle} % pdf文件的书签
-	
-	\begin{titlepage}
-		\begin{center}
-			
-			\setlength{\@title@width}{3.5cm}
-			{
-				\begin{tabular}{lcclc}
-					\xiaosi\hei{分类号}&  \underline{\makebox[\@title@width][c]{\@classnumber}}&\qquad \qquad \qquad \qquad \qquad & 
-					\xiaosi\hei{学校代码}&  \underline{\makebox[\@title@width][c]{\@schoolcode}}\\
-					\xiaosi\hei{U~~D~~C}& \underline{\makebox[\@title@width][c]{\@UDCnumber}}&\qquad \qquad \qquad \qquad \qquad & 
-					\xiaosi\hei{密~~~~~~级}&  \underline{\makebox[\@title@width][c]{\@security}} \\
-				\end{tabular}
-			}
-			
-			\vspace*{3cm}
-			{\song\erhao \@cheading}
-			
-			\vspace*{1cm}
-			
-			\begin{center}
-				\begin{spacing}{1.5}
-					\hei\sanhao \@thesisTitle%标题可以使用断字
-				\end{spacing}
-			\end{center}
-			
-			\begin{center}
-				\begin{spacing}{1.5}
-					\song\sanhao \@authorName%标题可以使用断字
-				\end{spacing}
-			\end{center}
-			
-			%\makebox[宽度][位置]{文本}中可指定盒子宽度，文本在盒子中的位置（l：左端；r：右端；s：两端，默认是居中）
-			\vspace{\baselineskip}
-			\setlength{\@title@width}{6.5cm}
-			{
-				\begin{spacing}{3}
-					\makebox[3.3cm][s]{\sanhao\song{学~~~~位~~~~类~~~~别}} \sanhao\song\underline{\makebox[\@title@width]{\@cdegree}} \\
-					\makebox[3.3cm][s]{\sanhao\song{专~~~~业~~~~名~~~~称}} \sanhao\song\underline{\makebox[\@title@width]{\@majorName}} \\
-					\makebox[3.3cm][s]{\sanhao\song{学院（系、所）}} \sanhao\song\underline{\makebox[\@title@width]{\@college}} \\
-					\makebox[3.3cm][s]{\sanhao\song{指导老师}} \sanhao\song\underline{\makebox[\@title@width]{\@supervisor}} \\
-				\end{spacing}
-			}
-		\end{center}
-		
-	\end{titlepage}	
-	
-	\clearpage
-}
-\makeatother
-
-
-%%% 此处是数据填写部分 
+%%% 封面填写部分 
 
 \classnumber{TP37}
 \schoolcode{10590}
