--- a/data/copyright.tex
+++ b/data/copyright.tex
@@ -1,64 +1,6 @@
 % !Mode:: "TeX:UTF-8"
 
-%%%% 此处是原创性声明的格式定义，数据填写的部分在下方 %%%
-
-\makeatletter
-
-\def\declaretitle#1{\def\@declaretitle{#1}}\def\@declaretitle{}
-\def\declarecontent#1{\def\@declarecontent{#1}}\def\@declarecontent{}
-\def\authorizationtitle#1{\def\@authorizationtitle{#1}}\def\@authorizationtitle{}
-\def\authorizationcontent#1{\def\@authorizationcontent{#1}}\def\@authorizationconent{}
-\def\authorizationadd#1{\def\@authorizationadd{#1}}\def\@authorizationadd{}
-\def\authorsigncap#1{\def\@authorsigncap{#1}}\def\@authorsigncap{}
-\def\supervisorsigncap#1{\def\@supervisorsigncap{#1}}\def\@supervisorsigncap{}
-\def\signdatecap#1{\def\@signdatecap{#1}}\def\@signdatecap{}
-
-% 定义makecopyright以生成原创性说明
-\def\makecopyright{
-	
-	\clearpage
-	
-	% 如果需要上传稿包含版权页，取消这部分内容注释
-	%\includepdf{data/Copyright.pdf}
-	
-	
-	% 下面为原创性声明页面的格式设置，如果引入pdf文件作为原创性声明，则将此部分代码注释掉
-	\pagestyle{fancy}
-	\fancyhf{}
-	\fancyfoot[C]{\song\xiaowu ~\thepage~}
-	\renewcommand{\headrulewidth}{0pt}
-	\chapter*{\song\sanhao 深圳大学学位论文原创性声明和使用授权说明}{		% modified by Jon, 原创性说明无需加入目录，使用chapter*
-		\thispagestyle{empty} 		% modified by Jon: 原创性说明不需要页码
-		\qquad\\
-		\begin{center}\hei\xiaoer{\@declaretitle}\end{center}\par
-		\song\defaultfont{\@declarecontent}\par
-		\vspace*{1cm}
-		{\song\xiaosi
-			\@authorsigncap \makebox[2.5cm][s]{}
-			\@signdatecap \makebox[2cm][s]{} 年 \makebox[1cm][s]{} 月 \makebox[1cm][s]{} 日
-		}
-		\vspace{0.6\baselineskip}
-		\begin{center}\hei\xiaoer{\@authorizationtitle}\end{center}\par
-		{
-			\vspace{1.2\baselineskip}
-			\song\defaultfont{\@authorizationcontent}
-			\par \song\defaultfont{\@authorizationadd}
-		}
-		\vspace{2\baselineskip}
-		
-		{
-			\song\xiaosi
-			\@authorsigncap \makebox[3.5cm][s]{}  \@signdatecap \makebox[1.5cm][s]{} 年 \makebox[1cm][s]{} 月 \makebox[1cm][s]{} 日 \\
-			\indent
-			\@supervisorsigncap \makebox[3.5cm][s]{}  \@signdatecap \makebox[1.5cm][s]{} 年 \makebox[1cm][s]{} 月 \makebox[1cm][s]{} 日
-		}
-	}
-
-	\clearpage
-}
-\makeatother
-
-%%%% 数据填写的部分 %%%
+%%%% 原创性声明填写部分 %%%
 
 \declaretitle{原创性声明}
 \declarecontent{
