fix: 调整正文行距的代码不起作用

--- a/setup/format.tex
+++ b/setup/format.tex
@@ -62,13 +62,10 @@
   \setlength\abovedisplayshortskip{4pt}
   \setlength\belowdisplayskip{\abovedisplayskip}
   \setlength\belowdisplayshortskip{\abovedisplayshortskip}
+  \setlength{\baselineskip}{23pt}		% 设置行距和段落间垂直距离
     \let\@listi\@listI}
 \def\defaultfont{\renewcommand{\baselinestretch}{1.65}\normalsize\selectfont}
 \makeatother
-
-% 设置行距和段落间垂直距离
-\setlength{\baselineskip}{23pt}		% 行距为23pt
-
 
 %%%%%%%%%%%%% 目录格式设置 %%%%%%%%%%%%%%%%%
 \renewcommand{\contentsname}{目\quad录}
