--- a/setup/format.tex
+++ b/setup/format.tex
@@ -180,6 +180,8 @@
 \theoremsymbol{$\square$}
 
 
+\algrenewcommand\alglinenumber[1]{\fontsize{10.5pt}{15pt}\selectfont #1:}	% 算法行号字体设置
+\algrenewcommand{\ALG@beginalgorithmic}{\fontsize{10.5pt}{15pt}\selectfont \song}	% 算法内容字体设置
 
 %%%%%%%%%% Page: number, header and footer  页码%%%%%%%%%%%%%%%%%
 
