--- a/setup/package.tex
+++ b/setup/package.tex
@@ -6,7 +6,7 @@
 \usepackage[chapter]{algorithm}
 \usepackage{pdfpages}% 方便插入签字版权页
 %\usepackage{algorithmic}
-
+\usepackage{etoolbox}
 \usepackage{algpseudocode}
 
 \usepackage{graphicx}                       % 支持插图处理
