add package: colortbl

--- a/setup/package.tex
+++ b/setup/package.tex
@@ -26,6 +26,7 @@
 \usepackage[below]{placeins}                %允许上一个section的浮动图形出现在下一个section的开始部分,还提供\FloatBarrier命令,使所有未处理的浮动图形立即被处理
 \usepackage{flafter}                        % 使得所有浮动体不能被放置在其浮动环境之前，以免浮动体在引述它的文本之前出现.
 \usepackage{multirow}                       % 使用Multirow宏包，使得表格可以合并多个row格
+\usepackage{colortbl}						% 表格颜色
 \usepackage{booktabs}                       % 表格，横的粗线；\specialrule{1pt}{0pt}{0pt}
 \usepackage{longtable}                      % 支持跨页的表格。
 \usepackage{tabularx}                       % 自动设置表格的列宽
